# TepSonic

./: CMakeLists.txt  CMakeLists.txt.user.1.3  Doxyfile  README  TODO  abstractplugin.h  collectionbrowser.cpp  collectionbrowser.h  collectionbuilder.cpp  collectionbuilder.h  collectionitem.cpp  collectionitem.h  collectionmodel.cpp  collectionmodel.h  collectionpopulator.cpp  collectionpopulator.h  collectionproxymodel.h  collections.ui  collectionsmanager.cpp  collectionsmanager.h  collectionsupdater.cpp  collectionsupdater.h  databasemanager.cpp  databasemanager.h  dirs.pri  icons.qrc  index.html  infopanel.cpp  infopanel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.json  player.cpp  player.h  playlistbrowser.cpp  playlistbrowser.h  playlistitem.cpp  playlistitem.h  (+29 more)
cmake/modules/: FindLastFmLib.cmake  FindPhonon.cmake  FindTaglib.cmake  TepSonicMacros.cmake
core/: CMakeLists.txt  TepSonicConfig.cmake.in  abstractplugin.cpp  abstractplugin.h  actionmanager.cpp  actionmanager.h  collectionmodel.cpp  collectionmodel.h  collectionmodel_p.h  constants.cpp  constants.h.cmake  databasemanager.cpp  databasemanager.h  m3u.cpp  m3u.h  metadata.cpp  metadata.h  player.cpp  player.h  playlist.cpp  playlist.h  playlistmodel.cpp  playlistmodel.h  pluginsmanager.cpp  pluginsmanager.h  settings.cpp  settings.h  supportedformats.cpp  supportedformats.h  utils.cpp  utils.h
macosx/: CMakeLists.txt  bundle.cmake.in  tepsonic.icns
player/: CMakeLists.txt  abstractplugin.cpp  abstractplugin.h  actionmanager.cpp  actionmanager.h  changeshortcutdialog.cpp  changeshortcutdialog.h  cmake_install.cmake  constants.cpp  constants.h  constants.h.cmake  databasemanager.cpp  databasemanager.h  filesystembrowser.cpp  filesystembrowser.h  filesystemview.cpp  filesystemview.h  filesystemwidget.cpp  filesystemwidget.h  icons.qrc  m3u.cpp  m3u.h  main.cpp  mainwindow.cpp  mainwindow.h  metadata.cpp  metadata.h  metadataeditor.cpp  metadataeditor.h  player.cpp  player.h  plugininterface.h  pluginsmanager.cpp  pluginsmanager.h  preferencesdialog.cpp  preferencesdialog.cpp.orig  preferencesdialog.h  preferencespages.cpp  preferencespages.h  settings.cpp  (+15 more)
player/bookmarks/: addbookmarkdlg.cpp  addbookmarkdlg.h  addbookmarkdlg.ui  bookmarksbrowser.cpp  bookmarksbrowser.h  bookmarksitem.cpp  bookmarksitem.h  bookmarksmanager.cpp  bookmarksmanager.h
player/collections/: collectionbrowser.cpp  collectionbrowser.h  collectionbuilder.cpp  collectionbuilder.h  collectionitem.cpp  collectionitem.h  collectionitemdelegate.cpp  collectionitemdelegate.h  collectionmodel.cpp  collectionmodel.h  collectionmodel_p.h  collectionpopulator.cpp  collectionpopulator.h  collectionproxymodel.cpp  collectionproxymodel.h  collectionview.cpp  collectionview.h
player/playlist/: playlistbrowser.cpp  playlistbrowser.h  playlistitem.cpp  playlistitem.h  playlistitemdelegate.cpp  playlistitemdelegate.h  playlistmodel.cpp  playlistmodel.h  playlistpopulator.cpp  playlistpopulator.h  playlistproxymodel.cpp  playlistproxymodel.h  playlistsortfiltermodel.cpp  playlistsortfiltermodel.h  playlistview.cpp  playlistview.h  playlistwriter.cpp  playlistwriter.h
player/settings/: changeshortcutdialog.cpp  changeshortcutdialog.h  collectionspage.cpp  collectionspage.h  collectionspage.ui  playereffectdialog.cpp  playereffectdialog.h  playerpage.cpp  playerpage.h  playerpage.ui  pluginspage.cpp  pluginspage.h  pluginspage.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingspage.cpp  settingspage.h  shortcutspage.cpp  shortcutspage.h  shortcutspage.ui
player/ts/: cs.ts  cs_CZ.ts
player/ui/: changeshortcutdialog.ui  mainwindow.ui  metadataeditor.ui  player.ui  plugins.ui  preferencesdialog.ui  shortcuts.ui
plugins/: CMakeLists.txt  plugins.pro
plugins/LastFmScrobbler/: CMakeLists.txt  LastFmScrobbler.json  LastFmScrobbler.pro  lastfmscrobbler.cpp  lastfmscrobbler.desktop  lastfmscrobbler.h  lastfmscrobblerconfig.ui
plugins/LastFmScrobbler/src/: abstractplugin.h  auth.cpp  auth.h  cache.cpp  cache.h  lastfm.cpp  lastfm.h  lastfmscrobbler.cpp  lastfmscrobbler.h  lastfmscrobblerplugin.cpp  lastfmscrobblerplugin.h  player.h  plugininterface.h  scrobbler.cpp  scrobbler.h  track.cpp  track.h
plugins/LastFmScrobbler/ts/: cs.ts  ts.pri
plugins/LastFmScrobbler/ui/: lastfmscrobblerconfig.ui
plugins/lyrics/: CMakeLists.txt  Lyrics.json  lyrics.desktop
plugins/lyrics/src/: lyrics.cpp  lyrics.h  lyricsscrollarea.cpp  lyricsscrollarea.h  plugininterface.h
plugins/mpris2/: CMakeLists.txt  MPRIS2Plugin.json  mpris2.desktop
plugins/mpris2/src/: dbusabstractadaptor.cpp  dbusabstractadaptor.h  mpris2plugin.cpp  mpris2plugin.h  mprismediaplayer2.cpp  mprismediaplayer2.h  mprismediaplayer2player.cpp  mprismediaplayer2player.h
src/: abstractplugin.h  constants.cpp  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  plugininterface.h  pluginsmanager.cpp  pluginsmanager.h  preferencesdialog.cpp  preferencespages.cpp  preferencespages.h  qrc_icons.cpp  src.pro  statusbar.h  taskmanager.cpp  taskmanager.h  tools.cpp  tools.h  trayicon.cpp
src/collections/: collectionbuilder.cpp  collectionbuilder.h  collectionmodel.cpp  collectionmodel.h  collectionpopulator.cpp  collectionpopulator.h  collectionproxymodel.cpp
src/playlist/: playlistbrowser.h  playlistmodel.cpp  playlistmodel.h  playlistpopulator.cpp  playlistproxymodel.cpp  playlistwriter.h
src/ts/: ts.pri
src/ui/: collections.ui  mainwindow.ui
stylesheets/: stylesheet.css
ts/: cs_CZ.ts  ts.pri
