if (DEFINED WITH_LASTFMSCROBBLER)
  if (NOT WITH_LASTFMSCROBBLER MATCHES OFF)
    add_subdirectory(LastFmScrobbler)
  endif (NOT WITH_LASTFMSCROBBLER MATCHES OFF)
else (DEFINED WITH_LASTFMSCROBBLER)
  add_subdirectory(LastFmScrobbler)
endif (DEFINED WITH_LASTFMSCROBBLER)

if (NOT WITH_LYRICS_PLUGIN MATCHES OFF)
  add_subdirectory(lyrics)
endif (NOT WITH_LYRICS_PLUGIN MATCHES OFF)


if (NOT WITH_MPRIS2_PLUGIN MATCHES OFF)
    add_subdirectory(mpris2)
endif ()
